# tqdm

./: CONTRIBUTING.md  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: check.yml  test.yml
.meta/: .readme.rst  mkdocs.py
examples/: 7zx.py  async_coroutines.py  parallel_bars.py  tqdm_requests.py  tqdm_wget.py  tqdm_zipfile.py  wrapping_generators.py
src/tldm/: __init__.py  _monitor.py  aliases.py  notebook.py  std.py  utils.py
src/tldm/extensions/: __init__.py  asyncio.py  pandas.py  rich.py
src/tqdm/: __init__.py  _monitor.py  aliases.py
src/tqdm/extensions/: __init__.py  pandas.py
tests/: conftest.py  test_asyncio.py  test_benchmark.py  test_concurrent.py  test_contrib.py  test_contrib_logging.py  test_dask.py  test_itertools.py  test_keras.py  test_main.py  test_notebook.py  test_pandas.py  test_perf.py  test_rich.py  test_synchronisation.py  test_tldm.py  test_tqdm.py  test_utils.py  tests_concurrent.py  tests_contrib.py  tests_main.py  tests_perf.py  tests_synchronisation.py  tests_tqdm.py  tests_utils.py
tqdm/: __init__.py  _monitor.py  aliases.py  asyncio.py  asyncio_notebook.py  auto.py  autonotebook.py  cli.py  notebook.py  pandas.py  rich.py  std.py  utils.py
tqdm/contrib/: __init__.py  concurrent.py
tqdm/extensions/: asyncio.py  concurrent.py  rich.py
