[project.urls]
repository = "https://github.com/eliotwrobson/tldm"

[project]
name = "tldm"
dynamic = ["version"]
maintainers = [{ name = "Eliot W. Robson", email = "eliot.robson24@gmail.com" }]
description = "A Python progress bar for a new era"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "progressbar",
    "progressmeter",
    "progress",
    "bar",
    "meter",
    "rate",
    "eta",
    "console",
    "terminal",
    "time",
]
license = { file = "LICENCE" }


# Trove classifiers (https://pypi.org/pypi?%3Aaction=list_classifiers)
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: MacOS X",
    "Environment :: Other Environment",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: MS-DOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: BSD",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: SunOS/Solaris",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Desktop Environment",
    "Topic :: Office/Business",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Pre-processors",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = ['colorama', "wcwidth"]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tqdm"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
fallback-version = "0.0.0"

[dependency-groups]
dev = [
    "pytest>=6",
    "pytest-cov",
    "pytest-timeout",
    "pytest-asyncio>=0.24",
    "pytest-rerunfailures",
    "pytest-mock",
    "pytest-benchmark",
    "nbval",
    "icecream",
    "mypy",
    "types-colorama",
    "wcwidth-stubs",
    "pandas>=2.0",
    "pandas-stubs",
    "rich",
    # Used in benchmark comparisons (test_benchmark.py)
    "progressbar2",
    "alive-progress",
]
notebook = ["ipywidgets>=6"]

[tool.flake8]
max_line_length = 99
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    ".asv",
    ".tox",
    ".ipynb_checkpoints",
]

[tool.yapf]
spaces_before_comment = [15, 20]
arithmetic_precedence_indication = true
allow_split_before_dict_value = false
coalesce_brackets = true
column_limit = 99
each_dict_entry_on_separate_line = false
space_between_ending_comma_and_closing_bracket = false
split_before_named_assigns = false
split_before_closing_bracket = false
blank_line_before_nested_class_or_def = false

[tool.pytest.ini_options]
timeout = 30
log_level = "INFO"
markers = ["asyncio", "slow"]
testpaths = ["tests"]
addopts = "-v --tb=short -rxs -W=error --durations=0 --durations-min=0.1 --asyncio-mode=strict"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
include = ["src/tqdm/*"]
relative_files = true
disable_warnings = ["include-ignored"]
[tool.coverage.report]
show_missing = true
